--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,10 +24,19 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
+      - name: Get Token
+        id: get_workflow_token
+        uses: peter-murray/workflow-application-token-action@v3
+        with:
+          application_id: ${{ secrets.GIT_APP_ID }}
+          application_private_key: ${{ secrets.GIT_APP_KEY }}
+          permissions: "actions:write"
+  
+
       - name: run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
             skip_existing: true
             packages_with_index: true
         env:
-          CR_TOKEN: "${{ secrets.GIT_PUB_AUTH_TOKEN }}"
+          CR_TOKEN: "${{ steps.get_workflow_token.outputs.token }}"
